@@ -13,6 +13,10 @@ add u key to treemap to trigger moving 'up' a level
 add "calls N subs" to treemap mouseover box
 string eval merging - must allow at least viewing of source for called subs defined in a nested eval
 
+=head2 Changes in Devel::NYTProf 3.12 (svn XXXX)
+
+  Enabled savesrc=1 by default.
+
 =head2 Changes in Devel::NYTProf 3.11 (svn 1171) 12th March 2010
 
   Fixed assorted issues on Windows thanks to Jan Dubois.
